--- a/Website/ZAPWebsite/ZAPWebsite/ZAPWebsite.csproj
+++ b/Website/ZAPWebsite/ZAPWebsite/ZAPWebsite.csproj
@@ -118,6 +118,7 @@
     <Content Include="Images\DefaultSlideShow\Pic4.jpg" />
     <Content Include="Images\DefaultSlideShow\Pic5.jpg" />
     <Content Include="Images\Logo.png" />
+    <Content Include="OrderPage.aspx" />
     <Content Include="Stylesheets\Booking.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -208,6 +209,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="OrderPage.aspx.cs">
+      <DependentUpon>OrderPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OrderPage.aspx.designer.cs">
+      <DependentUpon>OrderPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
