--- a/Website/ZAPWebsite/ZAPWebsite/ZAPWebsite.csproj
+++ b/Website/ZAPWebsite/ZAPWebsite/ZAPWebsite.csproj
@@ -148,6 +148,7 @@
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Stylesheets\OrderPage.css" />
     <Content Include="Stylesheets\Style.css" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
